# Dreamer4

./: README.md  main.py  pyproject.toml
data/: mnist.py
dreamer_v4/: __init__.py
dreamer_v4/networks/: __init__.py  networks.py
envs/: __init__.py  cart_pole.py  core.py  double_pendulum.py  go2_walk.py  humanoid_standup.py  pendulum.py  triple_pendulum.py
envs/assets/: ant.xml  cart_pole.xml  double_pendulum.xml  humanoid.xml  humanoid_standup.xml  pendulum.xml
scripts/: main.py
src/dreamer4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dreamer4/networks/: mlp.py
