[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dreamer_v4"
dynamic = ["version"]
description = 'A JAX implementation of DreamerV4 targeting MuJoCo MJX — the GPU-accelerated MuJoCo backend that runs physics entirely on-device via JAX.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flax >= 0.12.6",
  "jax[cuda]",
  "mujoco-mjx",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/dreamer_v4#readme"
Issues = "https://github.com/U.N. Owen/dreamer_v4/issues"
Source = "https://github.com/U.N. Owen/dreamer_v4"

[tool.hatch.version]
path = "dreamer_v4/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["dreamer_v4"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dreamer_v4 tests}"

[tool.coverage.run]
source_pkgs = ["dreamer_v4", "tests"]
branch = true
parallel = true
omit = [
  "src/dreamer_v4/__about__.py",
]

[tool.coverage.paths]
dreamer_v4 = ["src/dreamer_v4", "*/dreamer_v4/src/dreamer_v4"]
tests = ["tests", "*/dreamer_v4/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
